Fix alignment problem in top menu, simplify css

--- a/client/stylesheets/menu_bar.less
+++ b/client/stylesheets/menu_bar.less
@@ -5,7 +5,8 @@
   text-overflow: ellipsis;
 }
 
-#active-goal-box.no-active-goal {
+#no-active-goal-box {
   color: #AAA;
   font-style: italic;
+  cursor: default;
 }
